@@ -6,7 +6,6 @@ Gaupol 0.8
  * Search for "FIX", "TODO", etc.
  * Examine Application.update_gui calls
  * Test searching for unicode strings and regexes
- * tools/py2html: line continuation backslashes
  * GNOME Bugzilla: http://live.gnome.org/Bugsquad/ForMaintainers
 
 Changes:
