@@ -6,59 +6,90 @@ body
   font-size: small;
 }
 
-a.line-number
-{
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  color: #BABDB6;
-  user-select: none;
-}
-
 pre
 {
   font-family: monospace;
   line-height: 1.4em;
 }
 
-.python-comment
+/* Comment */
+.com
 {
-  background-color: inherit;
   color: #3366FF;
 }
 
-.python-error
+/* ??? */
+.dir
 {
-  background-color: inherit;
-  color: #FF0000;
-  font-weight: bold;
+  color: #000000;
 }
 
-.python-keyword
+/* ??? */
+.dstr
 {
-  background-color: inherit;
+  color: #000000;
+}
+
+/* String escape */
+.esc
+{
+  color: #B957FF;
+}
+
+/* Keyword */
+.kwa
+{
   color: #FF4433;
 }
 
-.python-name
+/* __builtin__ */
+.kwb
 {
+  color: #FF38AC;
 }
 
-.python-number
+/* Exception */
+.kwc
 {
-  background-color: inherit;
+  color: #00B286;
+}
+
+/* Function */
+.kwd
+{
+  color: #000000;
+}
+
+/* Line anchor */
+.line
+{
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  color: #BABDB6;
+  margin-right: 6px;
+  user-select: none;
+}
+
+/* Number */
+.num
+{
   color: #B957FF;
 }
 
-.python-operator
+/* Comment */
+.slc
 {
+  color: #3366FF;
 }
 
-.python-string
+/* String */
+.str
 {
-  background-color: inherit;
   color: #B957FF;
 }
 
-.python-text
+/* Symbol */
+.sym
 {
+  color: #000000;
 }
